--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
         "eden/block": "dev-master",
         "eden/mysql": "dev-master",
         "eden/system": "dev-master",
-        "eden/registry": "dev-master"
+        "eden/registry": "dev-master",
+        "firebase/php-jwt": "^3.0"
     }
 }
