--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "require": {
-        "eden/block": "dev-master",
-        "eden/mysql": "dev-master",
-        "eden/system": "dev-master",
-        "eden/registry": "dev-master",
-        "eden/image": "^1.0",
-        "firebase/php-jwt": "^3.0"
+        "eden/block": "1.0.5",
+        "eden/mysql": "1.0.3",
+        "eden/system": "1.0.3",
+        "eden/registry": "1.0.2",
+        "eden/image": "1.0.3",
+        "firebase/php-jwt": "^3.0",
+        "phpmailer/phpmailer": "^5.2",
+        "league/oauth2-client": "~1.0"
     }
 }
