--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "firebase/php-jwt": "^3.0",
         "phpmailer/phpmailer": "^5.2",
         "league/oauth2-client": "~1.0",
-        "league/oauth2-google": "^1.0"
+        "league/oauth2-google": "^1.0",
+        "eden/handler": "^4.0"
     }
 }
